[project]
name = "claude-export"
version = "0.1.0"
description = "Exploring Claude data exports."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "litellm>=1.56.6",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
]

[tool.poetry.dependencies]
python-dotenv = "^1.0.0"
litellm = "^1.30.3"
